# quit-for-greater-good

./: .env.sample  README.md  docker-compose.yml
ExpoFrontend/: README.md  app.json  package-lock.json  package.json
ExpoFrontend/android/: settings.gradle
ExpoFrontend/android/app/: build.gradle
ExpoFrontend/android/app/src/main/: AndroidManifest.xml
ExpoFrontend/android/app/src/main/java/com/anonymous/QuitFGGood/: MainActivity.kt  MainApplication.kt
ExpoFrontend/android/app/src/main/res/values/: strings.xml
backend/: .env  Cargo.toml  Dockerfile  README.md  diesel.toml  docker-compose.yml
backend/db/: init.sql
backend/src/: main.rs
frontend/: Dockerfile  docker-compose.yml
frontend/app/: index.js  package.json
