[package]
name = "quit-for-greater-good"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
diesel = { version="2.2.6", features=["postgres"] }
dotenv = "0.15.0"
serde = { version="1.0.216", features=["derive"] }
# tokio = { version = "1", features = ["full"] }
# axum = "0.7.9"
# sqlx = { version = "0.8.2", features = ["runtime-tokio-native-tls", "postgres"] }
# dotenv = "0.15"